# qcli-java

./: README.md
java-demo/gdd-chatbot-main/: CMakeLists.txt  README.md  chatbot.cpp  commands.txt
java-demo/java/: .gitignore  Dockerfile  buildspec.ami.yaml  buildspec.asg.yaml  buildspec.eks.yaml  buildspec.manifest.yaml  buildspec.yaml
java-demo/java/code/: pom.xml
java-demo/java/code/src/main/java/chatbot/: Main.java
java-demo/java/manifests/: deploy.yaml
